--- a/.github/workflows/scrape.yml
+++ b/.github/workflows/scrape.yml
@@ -17,6 +17,9 @@ jobs:
       - name: Install dependencies
         run: npm install
 
+      - name: Install required packages for Puppeteer
+        run: sudo apt-get update && sudo apt-get install -y libnss3 libxss1 libasound2
+
       - name: Run script
         env:
           GROQ_API_KEY: ${{ secrets.GROQ_API_KEY }}
